--- a/iac/.env.example
+++ b/iac/.env.example
@@ -1,2 +1,3 @@
-linode_access_token=value
-linode_root_password=value
+TF_VAR_linode_access_token=value
+TF_VAR_linode_root_password=value
+TF_VAR_linode_root_ssh_pubkey="~/.ssh/id_linode_ed25519"
